role table simplify